# OOP-CPP-Labs

task-0/: CMakeLists.txt  Controller.cpp  Controller.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  Statistics.cpp  Statistics.h  Tokenizer.cpp  in.txt  main.cpp  out.csv  Основы ООП - Задача 0 (intro).md
task-0/Tests/: CMakeLists.txt  FileReaderTest.cpp  FileWriterTest.cpp  StatisticsTest.cpp  TokenizerTest.cpp
task-0/src/: CMakeLists.txt  Controller.cpp  Controller.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  Statistics.cpp  Statistics.h  Tokenizer.cpp  Tokenizer.h
task-1/: CMakeLists.txt  main.cpp  Основы ООП - Задача 1 (BitArray).md
task-1/Tests/: BitArrayTest.cpp  CMakeLists.txt
task-1/src/: BitArray.cpp  BitArray.h  CMakeLists.txt
task-2/: CMakeLists.txt  main.cpp  Основы ООП - Задача 2 (Жизнь).md
task-2/Tests/: CMakeLists.txt  FileReaderTest.cpp  GameTest.cpp  TestFile.txt  TestFile2.txt  UniverseTest.cpp
task-2/Universes/: Acorn.txt  Acorn_Everlive.txt  BiBlock.txt  Copperhead.txt  Glider.txt
task-2/src/: CMakeLists.txt  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  Game.cpp  Game.h  Universe.cpp  Universe.h  UniverseParser.cpp  UniverseParser.h
task-3/: CMakeLists.txt  Config.txt  main.cpp  Основы ООП - Задача 3 (Sound Processor).md
task-3/Tests/: CMakeLists.txt  FileReaderTest.cpp
task-3/src/: CMDParser.cpp  CMDParser.h  CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  Exceptions.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  WAVReader.cpp  WAVReader.h  WAVWriter.cpp  WAVWriter.h  WAVformat.h
task-3/src/Converters/: Converter.h  ConverterFactory.cpp  ConverterFactory.h  Mix.cpp  Mix.h  Mute.cpp  Mute.h  Slow.cpp  Slow.h
task-4/: CMakeLists.txt  example.csv  main.cpp  Основы ООП - Задача 4 (templates).md
task-4/Tests/: CMakeLists.txt  CSVParserTests.cpp  PrintTupleTests.cpp  testfile_1.csv  testfile_2.csv
task-4/src/: CMakeLists.txt  CSVParser.h  PrintTuple.h  TuplePrinter.h  TupleReader.h
